<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/feedback"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/how_was_the_delivery"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rate_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/sad72"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/terrible"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/emotion72"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/bad"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/happyy72"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/okay"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/happy72"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/good"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/smille"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/superb"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/give_some_feedback_in_words"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/food_feedback_edttxt_bg"
            android:inputType="textMultiLine|textCapCharacters"
            android:lines="3"
            android:padding="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/food_red"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>

</layout>
