<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="orderItemListAdpter"
            type="com.xjek.foodservice.view.OrderItemListAdapter" />

        <variable
            name="foodLiveTaskviewModel"
            type="com.xjek.foodservice.view.FoodLiveTaskServiceViewModel" />

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/food_bg_white"
            app:title="@string/live_task" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/order_status_btn"
            android:layout_below="@+id/toolbar_layout"
            android:layout_marginTop="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/time_left_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:background="@color/food_red">

                    <TextView
                        android:id="@+id/top_trnx_id"
                        style="@style/MediumText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/time_left"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/service_flow_icon_llayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/icon_started_towards_restaurant"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="8dp"
                        android:background="@drawable/round_accent"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_scooter_white" />

                    <ImageView
                        android:id="@+id/icon_reached_restaurant"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="8dp"
                        android:background="@drawable/round_grey"
                        android:contentDescription="@string/reached_restaurant"
                        android:padding="8dp"
                        android:src="@drawable/ic_reached_restaurant"
                        android:tint="@color/white" />

                    <ImageView
                        android:id="@+id/icon_order_picked_up"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="8dp"
                        android:background="@drawable/round"
                        android:contentDescription="@string/order_picked_up"
                        android:padding="8dp"
                        android:src="@drawable/ic_order_picked_up" />

                    <ImageView
                        android:id="@+id/icon_order_delivered"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="8dp"
                        android:background="@drawable/round"
                        android:contentDescription="@string/order_delivered"
                        android:padding="8dp"
                        android:src="@drawable/ic_order_delivered" />

                    <ImageView
                        android:id="@+id/icon_payment_received"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="8dp"
                        android:background="@drawable/round"
                        android:contentDescription="@string/payment_received"
                        android:padding="8dp"
                        android:src="@drawable/ic_payment_received" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp">

                    <ImageView
                        android:id="@+id/resturant_image"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dummy_foodi_banner" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_toEndOf="@+id/resturant_image"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/loc_name_tv"
                            style="@style/MediumText.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/dummy_resturant_name"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/loc_address_tv"
                            style="@style/SmallText.Plain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/dummy_address" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/call_img"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/app_name"
                                android:padding="@dimen/_5sdp"
                                app:srcCompat="@drawable/ic_call" />

                            <ImageView
                                android:id="@+id/loc_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/app_name"
                                android:padding="@dimen/_5sdp"
                                app:srcCompat="@drawable/ic_navigation" />

                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:background="#dadada" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/order_id_tv"
                        style="@style/MediumText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/delivered_time_tv"
                        android:text="@string/dummy_order_id"
                        android:textColor="@color/food_red" />

                    <TextView
                        android:id="@+id/delivered_time_tv"
                        style="@style/MediumText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/dummy_time"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:background="#dadada" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_item_list_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:adapter="@{orderItemListAdpter}"
                    android:padding="@dimen/_5sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/bg_dotted_grey_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/item_total"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/item_total_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/dummy_item_total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/service_tax"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/servicetax_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/dummy_item_total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/delivery_charge_tv"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/delivery_charge_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/dummy_item_total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_toStartOf="@+id/total_value_tv"
                        android:layout_toLeftOf="@+id/total_value_tv"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/total"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/total_value_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/dummy_item_total"
                        android:textColor="@color/black" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/order_status_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/foodie_round_corner"
            android:onClick="@{() -> foodLiveTaskviewModel.updateFoodDeliverStatus()}"
            android:text="@string/started_towards_restaturant"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>
